<resources>
    <string name="app_name">Midterm Project</string>
    <string name="delete_confirmation">Are you sure you want to delete this note?</string>
    <string name="yes">Yes</string>
    <string name ="welcome">Welcome to the Game!</string>
    <string name="no">No</string>
    <string name="pg">Play Game</string>
    <string name="vhs">View High Score</string>
    <string name="back">Back</string>
    <string name="player">Player name:</string>
    <string name="enter">Enter your guess:</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="ok">OK</string>
    <string name="numOfAttempt">Number of attempts: </string>

</resources>